# flow_detect

./: .gitignore  CMakeLists.txt  README.md  run_all.sh
config/: config.json
plot/: plot_cluster.py  plot_dbscan_pca.py  plot_dbscan_result.py  plot_dbstream_pca.py  plot_iforest_pca.py  plot_iforest_result.py  plot_pca_feat.py
src/: common.hpp  main.cpp
src/algorithm/: bloomfilter.hpp  dbstream.hpp  isolation_forest.hpp  mini_batch_kmeans.cpp  mini_batch_kmeans.hpp
src/dataloader/: cicids_loader.cpp  cicids_loader.hpp  data_loader.cpp  data_loader.hpp  hypervison_loader.cpp  hypervison_loader.hpp  pcap_loader.cpp
src/detector/: algorithm.hpp  dbscan_detector.cpp  detector.cpp  detector.hpp  iforest_detector.cpp  mbk_detector.cpp  mix_detector.cpp  rf.cpp  rf_detector.cpp  rfdetector.cpp
src/feature/: fixed_rolling_counter.hpp  flow_feature.cpp  flow_feature.hpp  graph_features.cpp  graph_features.hpp  subgraph_agg.hpp
src/flow_construct/: explicit_constructor.cpp  explicit_constructor.hpp  flow_define.hpp
src/graph_construct/: edge_constructor.cpp  edge_constructor.hpp
src/parser/: packet.hpp  packet_info.hpp  packet_parser.cpp  packet_parser.hpp
